# pano-gst-plugin

./: .gitignore  .gitmodules
gst-app/src/: main.c
gst-plugin/: configure.ac
gst-plugin/src/: Makefile.am  gstPanoramaplugin.c  gstaudiofilter.c  gstpanorama.c  gstpanorama.h
